syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "workspace-file.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "chorus workspace file service";
        version: "1.0";
        contact: {
            name: "chorus workspace file service";
            url: "https://github.com/CHORUS-TRE/chorus-backend";
            email: "dev@chorus-tre.ch";
        };
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
};

// File management related messages
message GetWorkspaceFileRequest {
    uint64 workspaceId = 1;
    string path = 2;
}
message GetWorkspaceFileReply {
    GetWorkspaceFileResult result = 1;
}
message GetWorkspaceFileResult {
    WorkspaceFile file = 1;
}

message ListWorkspaceFilesRequest {
    uint64 workspaceId = 1;
    string path = 2;
}
message ListWorkspaceFilesReply {
    ListWorkspaceFilesResult result = 1;
}
message ListWorkspaceFilesResult {
    repeated WorkspaceFile files = 1;
}

message CreateWorkspaceFileRequest {
    uint64 workspaceId = 1;
    WorkspaceFile file = 2;
}
message CreateWorkspaceFileReply {
    CreateWorkspaceFileResult result = 1;
}
message CreateWorkspaceFileResult {
    WorkspaceFile file = 1;
}

message UpdateWorkspaceFileRequest {
    uint64 workspaceId = 1;
    string oldPath = 2; // For renaming or moving files
    WorkspaceFile file = 3;
}
message UpdateWorkspaceFileReply {
    UpdateWorkspaceFileResult result = 1;
}
message UpdateWorkspaceFileResult {
    WorkspaceFile file = 1;
}

message DeleteWorkspaceFileRequest {
    uint64 workspaceId = 1;
    string path = 2;
}
message DeleteWorkspaceFileReply {
    DeleteWorkspaceFileResult result = 1;
}
message DeleteWorkspaceFileResult {}

service WorkspaceFileService {
    // File management methods
    rpc GetWorkspaceFile(GetWorkspaceFileRequest) returns (GetWorkspaceFileReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/workspaces/{workspaceId}/file/{path=**}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get a file in a workspace";
            description: "This endpoint retrieves a file at the specified path within a workspace";
            tags: "WorkspaceFileService";
        };
    };

    rpc ListWorkspaceFiles(ListWorkspaceFilesRequest) returns (ListWorkspaceFilesReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/workspaces/{workspaceId}/files/{path=**}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List files in a workspace at a specified path";
            description: "This endpoint lists all files at given path within a workspace";
            tags: "WorkspaceFileService";
        };
    };

    rpc CreateWorkspaceFile(CreateWorkspaceFileRequest) returns (CreateWorkspaceFileReply) {
        option (google.api.http) = {
            post: "/api/rest/v1/workspaces/{workspaceId}/file"
            body: "file"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Create a file in a workspace";
            description: "This endpoint creates a file in a workspace at the specified path";
            tags: "WorkspaceFileService";
        };
    };

    rpc UpdateWorkspaceFile(UpdateWorkspaceFileRequest) returns (UpdateWorkspaceFileReply) {
        option (google.api.http) = {
            put: "/api/rest/v1/workspaces/{workspaceId}/file/{oldPath=**}"
            body: "file"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Update a file in a workspace";
            description: "This endpoint updates (rename or moves) a file in a workspace at the specified path";
            tags: "WorkspaceFileService";
        };
    };

    rpc DeleteWorkspaceFile(DeleteWorkspaceFileRequest) returns (DeleteWorkspaceFileReply) {
        option (google.api.http) = {
            delete: "/api/rest/v1/workspaces/{workspaceId}/file/{path=**}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Delete a file in a workspace";
            description: "This endpoint deletes a file in a workspace at the specified path";
            tags: "WorkspaceFileService";
        };
    };
}
